# sybil

./: .carthorse.yml  .gitignore  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.rst  README.rst  conftest.py  context7.json  happy.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
docs/: api.rst  changes.rst  concepts.rst  conf.py  conftest.py  description.rst  development.rst  example-skip.rst  index.rst  integration.rst  license.rst  markdown.rst  myst.rst  parsers.rst  patterns.rst  quickstart.rst  rest.rst  use.rst
functional_tests/nose/: test_docs.py  tests.py
functional_tests/pytest/: conftest.py  fail.rst  pass.rst  test.rst
functional_tests/unittest/: test_unittest.py  tests.py
src/sybil/: document.py  example.py  python.py  region.py  sybil.py  testing.py  text.py
sybil/: __init__.py  compat.py  document.py  example.py  python.py  region.py  sybil.py  testing.py  text.py  typing.py
sybil/evaluators/: doctest.py  python.py  skip.py
sybil/integration/: nose.py  pytest.py  unittest.py
sybil/parsers/: capture.py  codeblock.py  doctest.py  skip.py
tests/: __init__.py  helpers.py  test_capture.py  test_clear.py  test_codeblock.py  test_compatibility.py  test_doc_example.py  test_docs_examples.py  test_doctest.py  test_document.py  test_functional.py  test_helpers.py  test_lexing.py  test_markdown_lexers.py  test_myst_clear.py  test_myst_codeblock.py  test_myst_doctest.py  test_myst_lexers.py  test_myst_skip.py  test_pytest.py  test_rest_lexers.py  test_skip.py  test_sybil.py  test_testing.py
tests/samples/: capture.txt  capture_bad_indent1.txt  capture_bad_indent2.txt  capture_codeblock.txt  code.rst  codeblock-subclassing.txt  codeblock.txt  codeblock_future_imports.txt  codeblock_lolcode.txt  codeblock_with_options.txt  comments.py  (+56 more)
(+105 files in other folders)
