[project]
name = "sybil"
version = "9.3.0"
description = "Automated testing for the examples in your code and documentation."
readme = "README.rst"
authors = [{ name = "Chris Withers", email = "chris@withers.org" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/simplistix/sybil"
Documentation = "https://sybil.readthedocs.org/en/latest/"
Repository = "https://github.com/simplistix/sybil"
Changelog = "https://sybil.readthedocs.io/en/latest/changes.html"

[project.optional-dependencies]
pytest = ["pytest>=8"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "myst-parser",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.15.7",
    "seedir",
    "testfixtures>=11",
    "types-PyYAML",
]
docs = [
    "furo",
    "sphinx>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sybil"]

[tool.pytest.ini_options]
addopts = "--verbose --strict-markers -p no:doctest"
norecursedirs = ["functional", ".git", "docs/examples"]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests", "docs"]

[tool.mypy]
strict = true
disable_error_code = "union-attr"

[[tool.mypy.overrides]]
module = "sybil.integration.pytest"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.coverage.run]
source = ["sybil", "tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
